--- a/src/components/EmployeesAddForm/employeesAddForm.css
+++ b/src/components/EmployeesAddForm/employeesAddForm.css
@@ -4,7 +4,7 @@
     border-radius: 4px;
     box-shadow: 15px 15px 30px rgba(0,0,0, .15);
     color: #fff;
-    margin: 30px 192px;
+    margin: 30px 192px 100px;
 }
 
 .add-form {
